# AstrologyProject

./: README.md
Binaries/: Launcher
Development/: CMakeLists.txt
Development/Sources/: Main.cpp
