 # [[Root]]
cmake_minimum_required(VERSION 3.12)
project(SpaceCircle)

set(CMAKE_CXX_STANDARD 11)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

set(CMAKE_SHARED_LIBRARY_PREFIX "")
set(CMAKE_DEBUG_POSTFIX "-Debug")
set(CMAKE_RELWITHDEBINFO_POSTFIX "-RelWithDebInfo")


# [[Defaults]]
set(ASTROLOGY_DEVELOPMENT_DIR_NAME "Development")
set(ASTROLOGY_SOURCES_DIR_NAME "Sources")
set(ASTROLOGY_THIRDPARTY_DIR_NAME "ThirdParty")
set(ASTROLOGY_BINARIES_DIR_NAME "Binaries")
set(ASTROLOGY_RESOURCES_DIR_NAME "Resources")
set(ASTROLOGY_LAUNCHER_NAME "Launcher")

set(ASTROLOGY_PROJECT_DIR "${CMAKE_CURRENT_LIST_DIR}/..")
set(ASTROLOGY_PROJECT_DEVELOPMENT_DIR "${ASTROLOGY_PROJECT_DIR}/${ASTROLOGY_DEVELOPMENT_DIR_NAME}")
set(ASTROLOGY_PROJECT_SOURCES_DIR "${ASTROLOGY_PROJECT_DEVELOPMENT_DIR}/${ASTROLOGY_SOURCES_DIR_NAME}")
set(ASTROLOGY_PROJECT_THIRDPARTY_DIR "${ASTROLOGY_PROJECT_DEVELOPMENT_DIR}/${ASTROLOGY_THIRDPARTY_DIR_NAME}")
set(ASTROLOGY_PROJECT_BINARIES_DIR "${ASTROLOGY_PROJECT_DIR}/${ASTROLOGY_BINARIES_DIR_NAME}")
set(ASTROLOGY_PROJECT_RESOURCES_DIR "${ASTROLOGY_PROJECT_DIR}/${ASTROLOGY_RESOURCES_DIR_NAME}")

set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_DEBUG "${ASTROLOGY_PROJECT_BINARIES_DIR}")
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_RELWITHDEBINFO "${ASTROLOGY_PROJECT_BINARIES_DIR}")
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_RELEASE "${ASTROLOGY_PROJECT_BINARIES_DIR}")

set(CMAKE_LIBRARY_OUTPUT_DIRECTORY_DEBUG "${ASTROLOGY_PROJECT_BINARIES_DIR}")
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY_RELWITHDEBINFO "${ASTROLOGY_PROJECT_BINARIES_DIR}")
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY_RELEASE "${ASTROLOGY_PROJECT_BINARIES_DIR}")


# [[Definitions]]
add_compile_definitions("ASTROLOGY_PROJECT_RESOURCES_DIR=\"../${ASTROLOGY_RESOURCES_DIR_NAME}\"")


# [[Binaries]]
add_executable("${ASTROLOGY_LAUNCHER_NAME}")

set(ASTROLOGY_PROJECT_SOURCES_FILES_TYPES "cpp" "hpp")
foreach(SOURCE_FILE_TYPE IN LISTS ASTROLOGY_PROJECT_SOURCES_FILES_TYPES)
    list(APPEND ASTROLOGY_SOURCES_EXPRESSIONS "${ASTROLOGY_PROJECT_SOURCES_DIR}/*.${SOURCE_FILE_TYPE}")
endforeach()

file(GLOB_RECURSE ASTROLOGY_PROJECT_SOURCES_FILES ${ASTROLOGY_SOURCES_EXPRESSIONS})
target_sources("${ASTROLOGY_LAUNCHER_NAME}" PRIVATE ${ASTROLOGY_PROJECT_SOURCES_FILES})


# [[Dependencies]]
find_package(PkgConfig REQUIRED)
pkg_check_modules(CAIRO REQUIRED cairo)
target_include_directories("${ASTROLOGY_LAUNCHER_NAME}" PRIVATE ${CAIRO_INCLUDE_DIRS})
target_link_libraries("${ASTROLOGY_LAUNCHER_NAME}" PRIVATE ${CAIRO_LIBRARIES})
